Add the license of the foundation framework.

--- a/README
+++ b/README
@@ -45,3 +45,9 @@ Components used are:
 
 If you want to replace this with your own custom Foundation 6 - i.e. with different colors - just replace the foundation.min.css in the assets.
 
+## Licenses
+
+The Foundation framework is licensed under MIT.
+
+This theme is licensed under APGLv3.
+
